# gitea-docker-cleanup

./: .gitignore  .pre-commit-config.yaml  Makefile  env.sh  pyproject.toml  requirements.dev.in  requirements.dev.txt
openapi/gitea.yaml/openapi/: openapi.yaml
src/gitea_docker_cleanup/: cli.py
src/gitea_docker_cleanup/client/: gitea.py
src/gitea_docker_cleanup/config/: __init__.py
src/gitea_docker_cleanup/models/: gitea.py
swagger/gitea/: swagger.v1.json
