[tool.poetry]
name = "gitea-docker-cleanup"
version = "0.0.1"
description = "Tool for cleaning up containers in Gitea Packages"
authors = ["David Volm <david@volminator.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/daxxog/gitea-docker-cleanup"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
]

[tool.poetry.scripts]
gitea-docker-cleanup = "gitea_docker_cleanup.cli:main"

[tool.poetry.dependencies]
python = "^3.11"

pydantic = "*"

[tool.poetry.dev-dependencies]
datamodel-code-generator = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
